kuber/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - name: frontend
      protocol: TCP
      port: 4200
  selector:
   app: frontend
